# secret-move

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  secret-move  secret-move.spec
.github/workflows/: publish-to-pypi.yml
src/secret_move/: secret_move.py
