# secret-move - List, copy and move secrets across keyrings with libsecret
# Copyright (C) 2026 Philippe Troin (F-i-f on Github)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[project]
name = "secret-move"
version = "0.1"
authors = [
  { name="Philippe Troin", email="phil+github-commits@fifi.org" },
]
description = "List, copy and move secrets across libsecret keyrings"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
  "secretstorage",
]

[project.scripts]
secret-move = "secret_move.secret_move:main"

[project.urls]
Homepage = "https://github.com/F-i-f/secret-move"
Issues = "https://github.com/F-i-f/secret-move/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
